add dungeon recource
