# src/swagger/swagger.json
@@ -148,6 +148,30 @@
           }
         }
       }
+    },
+    "/dungeonResource/{dayOfWeek}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "dayOfWeek",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
